--- a/servir/index.html
+++ b/servir/index.html
@@ -216,7 +216,7 @@
             <div class="container">
                 <div class="base">
                     <h3>Restons en contact</h3>
-                    <h6>Tel : 221 77-832-64-08 Email : <a style="color: rgb(9, 167, 9);" href="mailto:kals.fall11@gmail.com ">kals.fall11@gmail.com </a></h6>
+                    <h6>Tel : 221 77-832-64-08 Email : <a style="color: rgb(9, 167, 9);" href="mailto:modou2015diop@gmail.com">kals.fall11@gmail.com </a></h6>
 
                     <h6>Adresse : BARALE NDIAYE</h6>
                     <input type="text" name="name" maxlength="80" placeholder="Nom (obligatoire)" />
